export footer to a new component

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -19,9 +19,4 @@
   </div>
 </div>
 
-<footer class="footer">
-  <div class="container">
-      <p><a href="https://twitter.com/telllijo" target="_blank">@telllijo</a> |
-         <a href="https://github.com/tellijo/BootQuest/issues?state=open" target="_blank">Issues</a></p>
-  </div>
-</footer>
+<div ng-include="'components/footer/footer.html'"></div>
