--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -4,22 +4,24 @@
   <div class="row">
     <div class="col-sm-12">
       <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
     </div>
     <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="login(form)" novalidate>
+      <form class="form form-horizontal" name="form" ng-submit="login(form)" novalidate>
 
         <div class="form-group">
-          <label>Email</label>
+          <label class="control-label col-md-1">Email</label>
 
-          <input type="email" name="email" class="form-control" ng-model="user.email" required>
+          <div class="col-md-3">
+            <input type="email" name="email" class="form-control" ng-model="user.email" required>
+          </div>
         </div>
 
         <div class="form-group">
-          <label>Password</label>
+          <label class="control-label col-md-1">Password</label>
 
-          <input type="password" name="password" class="form-control" ng-model="user.password" required>
+          <div class="col-md-3">
+            <input type="password" name="password" class="form-control" ng-model="user.password" required>
+          </div>
         </div>
 
         <div class="form-group has-error">
@@ -33,13 +35,15 @@
           <p class="help-block">{{ errors.other }}</p>
         </div>
 
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
-            Register
-          </a>
+        <div class="row">
+          <div class="col-md-offset-1 col-md-11">
+            <button class="btn btn-inverse btn-login" type="submit">
+              Login
+            </button>
+            <a class="btn btn-default btn-register" href="/signup">
+              Register
+            </a>
+          </div>
         </div>
 
         <hr>
