--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -2,66 +2,69 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1>
+    <div class="col-md-4 col-md-offset-4">
+      <h1 class="text-center">Login</h1>
     </div>
     <div class="col-sm-12">
       <form class="form form-horizontal" name="form" ng-submit="login(form)" novalidate>
 
-        <div class="form-group">
-          <label class="control-label col-md-1">Email</label>
-
-          <div class="col-md-3">
-            <input type="email" name="email" class="form-control" ng-model="user.email" required>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="control-label col-md-1">Password</label>
-
-          <div class="col-md-3">
-            <input type="password" name="password" class="form-control" ng-model="user.password" required>
-          </div>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ errors.other }}</p>
-        </div>
-
         <div class="row">
-          <div class="col-md-offset-1 col-md-11">
-            <button class="btn btn-inverse btn-login" type="submit">
-              Login
-            </button>
-            <a class="btn btn-default btn-register" href="/signup">
-              Register
-            </a>
+          <div class="col-md-4 col-md-offset-4">
+            <div class="form-group">
+              <label>Email</label>
+
+              <input type="email" name="email" class="form-control" ng-model="user.email" required>
+            </div>
+
+            <div class="form-group">
+              <label>Password</label>
+
+              <input type="password" name="password" class="form-control" ng-model="user.password" required>
+            </div>
+
+            <div class="form-group has-error">
+              <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
+                Please enter your email and password.
+              </p>
+              <p class="help-block" ng-show="form.email.$error.email && submitted">
+                Please enter a valid email.
+              </p>
+
+              <p class="help-block">{{ errors.other }}</p>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                <button class="btn btn-block btn-primary btn-login" type="submit">
+                  Login
+                </button>
+              </div>
+              <div class="col-md-6">
+                <a class="btn btn-block btn-default btn-register" href="/signup">
+                  Register
+                </a>
+              </div>
+            </div>
           </div>
         </div>
 
         <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Connect with Twitter
-          </a>
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <a class="btn btn-facebook btn-block" href="" ng-click="loginOauth('facebook')">
+              <i class="fa fa-facebook"></i> Connect with Facebook
+            </a>
+            <a class="btn btn-google-plus btn-block" href="" ng-click="loginOauth('google')">
+              <i class="fa fa-google-plus"></i> Connect with Google+
+            </a>
+            <a class="btn btn-twitter btn-block" href="" ng-click="loginOauth('twitter')">
+              <i class="fa fa-twitter"></i> Connect with Twitter
+            </a>
+          </div>
         </div>
       </form>
     </div>
   </div>
-  <hr>
 </div>
 
 <div ng-include="'components/footer/footer.html'"></div>
