--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -6,7 +6,7 @@
       <h1 class="text-center">Login</h1>
     </div>
     <div class="col-sm-12">
-      <form class="form form-horizontal" name="form" ng-submit="login(form)" novalidate>
+      <form class="form" name="form" ng-submit="login(form)" novalidate>
 
         <div class="row">
           <div class="col-md-4 col-md-offset-4">
