--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -6,7 +6,7 @@
       <h1>Change Password</h1>
     </div>
     <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="changePassword(form)" novalidate>
+      <form class="form" name="form" ng-submit="editSettings(form)" novalidate>
 
         <div class="form-group">
           <label>Current Password</label>
@@ -22,11 +22,22 @@
           <label>New Password</label>
 
           <input type="password" name="newPassword" class="form-control" ng-model="user.newPassword"
-                 ng-minlength="3"
-                 required/>
+                 ng-minlength="3"/>
           <p class="help-block"
              ng-show="(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || submitted)">
             Password must be at least 3 characters.
+          </p>
+        </div>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" name="useRealName" ng-model="user.useRealName"
+                   ng-minlength="3"
+                   mongoose-error/>
+            Use my real name
+          </label>
+          <p class="help-block" ng-show="form.password.$error.mongoose">
+            {{ errors.useRealName }}
           </p>
         </div>
 
