--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -13,18 +13,32 @@
                                             'has-error': form.name.$invalid && submitted }">
               <label>Name</label>
 
-              <input type="text" name="name" class="form-control" ng-model="user.name"
-                     required/>
-              <p class="help-block" ng-show="form.name.$error.required && submitted">
-                A name is required
+              <input type="text" name="name" class="form-control" placeholder="Ex: John Doe" ng-model="user.name"/>
+            </div>
+
+            <div class="form-group" ng-class="{ 'has-success': form.username.$valid && submitted,
+                                            'has-error': form.username.$invalid && submitted }">
+              <label>Username *</label>
+
+              <input type="text" name="username" class="form-control" placeholder="Ex: johndoe42" ng-model="user.username"
+                     required
+                     mongoose-error/>
+              <p class="help-block" ng-show="form.username.$error.email && submitted">
+                Doesn't look like a valid username.
+              </p>
+              <p class="help-block" ng-show="form.username.$error.required && submitted">
+                What's your username?
+              </p>
+              <p class="help-block" ng-show="form.username.$error.mongoose">
+                {{ errors.username }}
               </p>
             </div>
 
             <div class="form-group" ng-class="{ 'has-success': form.email.$valid && submitted,
                                             'has-error': form.email.$invalid && submitted }">
-              <label>Email</label>
+              <label>Email *</label>
 
-              <input type="email" name="email" class="form-control" ng-model="user.email"
+              <input type="email" name="email" class="form-control" placeholder="Ex: john@doe.com" ng-model="user.email"
                      required
                      mongoose-error/>
               <p class="help-block" ng-show="form.email.$error.email && submitted">
@@ -40,7 +54,7 @@
 
             <div class="form-group" ng-class="{ 'has-success': form.password.$valid && submitted,
                                             'has-error': form.password.$invalid && submitted }">
-              <label>Password</label>
+              <label>Password *</label>
 
               <input type="password" name="password" class="form-control" ng-model="user.password"
                      ng-minlength="3"
@@ -53,6 +67,10 @@
               <p class="help-block" ng-show="form.password.$error.mongoose">
                 {{ errors.password }}
               </p>
+            </div>
+
+            <div class="form-group">
+              <p class="help-block">* indicates a required field</p>
             </div>
 
             <div class="row">
