add all strategies for social provider, including github

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -60,6 +60,9 @@
             <a class="btn btn-twitter btn-block" href="" ng-click="loginOauth('twitter')">
               <i class="fa fa-twitter"></i> Connect with Twitter
             </a>
+            <a class="btn btn-github btn-block" href="" ng-click="loginOauth('github')">
+              <i class="fa fa-github"></i> Connect with Github
+            </a>
           </div>
         </div>
       </form>
