--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -41,7 +41,7 @@
           </p>
         </div>
 
-        <p class="help-block"> {{ message }} </p>
+        <p ng-class="{ 'text-success': success, 'text-danger': !success }"> {{ message }} </p>
 
         <button class="btn btn-lg btn-primary" type="submit">Save changes</button>
       </form>
