--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -100,6 +100,9 @@
             <a class="btn btn-block btn-twitter" href="" ng-click="loginOauth('twitter')">
               <i class="fa fa-twitter"></i> Connect with Twitter
             </a>
+            <a class="btn btn-github btn-block" href="" ng-click="loginOauth('github')">
+              <i class="fa fa-github"></i> Connect with Github
+            </a>
           </div>
         </div>
       </form>
