--- a/client/app/character/new.html
+++ b/client/app/character/new.html
@@ -1,11 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <a href="{{$root.goBackUrl}}"><i class="fa fa-arrow-circle-left"></i> Go back</a>
-    </div>
-  </div>
+  <go-back></go-back>
 
   <div class="row row-heading">
     <div class="col-md-12">
