--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <script src="directives/confirm/confirm.directive.js"></script>
+          <script src="directives/go-back/go-back.directive.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
