--- a/client/directives/go-back/go-back.html
+++ b/client/directives/go-back/go-back.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-md-12">
-    <a href="{{$root.goBackUrl}}"><i class="fa fa-arrow-circle-left"></i> Go back</a>
+    <a class="btn btn-primary btn-xs" href="{{$root.goBackUrl}}"><i class="fa fa-chevron-left"></i> Go back</a>
   </div>
 </div>
