--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,8 @@
           <script src="app/character/character.services.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/shop/shop.controller.js"></script>
+          <script src="app/shop/shop.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
