--- a/client/app/character/new.html
+++ b/client/app/character/new.html
@@ -47,7 +47,7 @@
           <div class="col-md-8">
             <input type="hidden" name="race" id="race" ng-model="character.race" required/>
             <div class="btn-group btn-group-justified">
-              <label class="btn btn-default" ng-repeat="race in races" btn-radio="'{{race._id}}'" ng-model="character._race">{{race.name}}</label>
+              <label class="btn btn-default" ng-repeat="race in races" btn-radio="'{{race._id}}'" ng-model="character.race">{{race.name}}</label>
             </div>
             <p class="help-block" ng-show="form.race.$error.required && submitted">
               What's the race of your character?
@@ -55,16 +55,16 @@
           </div>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.class.$valid && submitted,
-                                            'has-error': form.class.$invalid && submitted }">
+        <div class="form-group" ng-class="{ 'has-success': form.klass.$valid && submitted,
+                                            'has-error': form.klass.$invalid && submitted }">
           <label for="class" class="control-label col-md-4">Class*</label>
 
           <div class="col-md-8">
-            <input type="hidden" name="class" id="class" ng-model="character.class" required/>
+            <input type="hidden" name="class" id="class" ng-model="character.klass" required/>
             <div class="btn-group btn-group-justified">
-              <label class="btn btn-default" ng-repeat="klass in klasses" btn-radio="'{{klass._id}}'" ng-model="character._klass">{{klass.name}}</label>
+              <label class="btn btn-default" ng-repeat="klass in klasses" btn-radio="'{{klass._id}}'" ng-model="character.klass">{{klass.name}}</label>
             </div>
-            <p class="help-block" ng-show="form.class.$error.required && submitted">
+            <p class="help-block" ng-show="form.klass.$error.required && submitted">
               What's the class of your character?
             </p>
           </div>
@@ -78,10 +78,10 @@
               <div
                 class="progress-bar progress-bar-info"
                 role="progressbar"
-                aria-valuenow="{{character.stats.strength}}"
+                aria-valuenow="{{character.strength}}"
                 aria-valuemin="0"
                 aria-valuemax="20"
-                ng-style="{ 'width': (character.stats.strength*100/20)+ '%' }">{{character.stats.strength}}</div>
+                ng-style="{ 'width': (character.strength*100/20)+ '%' }">{{character.strength}}</div>
             </div>
           </div>
         </div>
@@ -94,10 +94,10 @@
               <div
                 class="progress-bar progress-bar-info"
                 role="progressbar"
-                aria-valuenow="{{character.stats.constitution}}"
+                aria-valuenow="{{character.constitution}}"
                 aria-valuemin="0"
                 aria-valuemax="20"
-                ng-style="{ 'width': (character.stats.constitution*100/20)+ '%' }">{{character.stats.constitution}}</div>
+                ng-style="{ 'width': (character.constitution*100/20)+ '%' }">{{character.constitution}}</div>
             </div>
           </div>
         </div>
@@ -110,10 +110,10 @@
               <div
                 class="progress-bar progress-bar-info"
                 role="progressbar"
-                aria-valuenow="{{character.stats.dexterity}}"
+                aria-valuenow="{{character.dexterity}}"
                 aria-valuemin="0"
                 aria-valuemax="20"
-                ng-style="{ 'width': (character.stats.dexterity*100/20)+ '%' }">{{character.stats.dexterity}}</div>
+                ng-style="{ 'width': (character.dexterity*100/20)+ '%' }">{{character.dexterity}}</div>
             </div>
           </div>
         </div>
@@ -126,10 +126,10 @@
               <div
                 class="progress-bar progress-bar-info"
                 role="progressbar"
-                aria-valuenow="{{character.stats.intelligence}}"
+                aria-valuenow="{{character.intelligence}}"
                 aria-valuemin="0"
                 aria-valuemax="20"
-                ng-style="{ 'width': (character.stats.intelligence*100/20)+ '%' }">{{character.stats.intelligence}}</div>
+                ng-style="{ 'width': (character.intelligence*100/20)+ '%' }">{{character.intelligence}}</div>
             </div>
           </div>
         </div>
@@ -142,10 +142,10 @@
               <div
                 class="progress-bar progress-bar-info"
                 role="progressbar"
-                aria-valuenow="{{character.stats.luck}}"
+                aria-valuenow="{{character.luck}}"
                 aria-valuemin="0"
                 aria-valuemax="20"
-                ng-style="{ 'width': (character.stats.luck*100/20)+ '%' }">{{character.stats.luck}}</div>
+                ng-style="{ 'width': (character.luck*100/20)+ '%' }">{{character.luck}}</div>
             </div>
           </div>
         </div>
@@ -157,10 +157,6 @@
         </div>
 
       </form>
-    </div>
-
-    <div class="col-md-6">
-      <pre>{{character|json}}</pre>
     </div>
   </div>
 </div>
