--- a/client/app/character/new.html
+++ b/client/app/character/new.html
@@ -40,31 +40,31 @@
           </div>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.race.$valid && submitted,
-                                            'has-error': form.race.$invalid && submitted }">
+        <div class="form-group" ng-class="{ 'has-success': form._race.$valid && submitted,
+                                            'has-error': form._race.$invalid && submitted }">
           <label for="race" class="control-label col-md-4">Race*</label>
 
           <div class="col-md-8">
-            <input type="hidden" name="race" id="race" ng-model="character.race" required/>
+            <input type="hidden" name="race" id="race" ng-model="character._race" required/>
             <div class="btn-group btn-group-justified">
-              <label class="btn btn-default" ng-repeat="race in races" btn-radio="'{{race._id}}'" ng-model="character.race">{{race.name}}</label>
+              <label class="btn btn-default" ng-repeat="race in races" btn-radio="'{{race._id}}'" ng-model="character._race">{{race.name}}</label>
             </div>
-            <p class="help-block" ng-show="form.race.$error.required && submitted">
+            <p class="help-block" ng-show="form._race.$error.required && submitted">
               What's the race of your character?
             </p>
           </div>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-success': form.klass.$valid && submitted,
-                                            'has-error': form.klass.$invalid && submitted }">
+        <div class="form-group" ng-class="{ 'has-success': form._klass.$valid && submitted,
+                                            'has-error': form._klass.$invalid && submitted }">
           <label for="class" class="control-label col-md-4">Class*</label>
 
           <div class="col-md-8">
-            <input type="hidden" name="class" id="class" ng-model="character.klass" required/>
+            <input type="hidden" name="class" id="class" ng-model="character._klass" required/>
             <div class="btn-group btn-group-justified">
-              <label class="btn btn-default" ng-repeat="klass in klasses" btn-radio="'{{klass._id}}'" ng-model="character.klass">{{klass.name}}</label>
+              <label class="btn btn-default" ng-repeat="klass in klasses" btn-radio="'{{klass._id}}'" ng-model="character._klass">{{klass.name}}</label>
             </div>
-            <p class="help-block" ng-show="form.klass.$error.required && submitted">
+            <p class="help-block" ng-show="form._klass.$error.required && submitted">
               What's the class of your character?
             </p>
           </div>
@@ -157,6 +157,9 @@
         </div>
 
       </form>
+    </div>
+    <div class="col-md-6">
+      <pre>{{character}}</pre>
     </div>
   </div>
 </div>
